--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
@@ -38,8 +39,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "babel-preset-react-app": "@babel/plugin-proposal-private-property-in-object",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "babel-preset-react-app": "@babel/plugin-proposal-private-property-in-object"
+    "tailwindcss": "^3.3.5"
   }
 }
