--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "babel-preset-react-app": "@babel/plugin-proposal-private-property-in-object",
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "babel-preset-react-app": "@babel/plugin-proposal-private-property-in-object"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
