--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-to-print": "^3.0.2",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
